# SSHConfig

./: .gitignore  Bug_and_Future.ods  CMakeLists.txt  README.md  SSHConfigTop.pro
RemoteWindow/: Auth.qml  AuthForSSHService.qml  CClient.cpp  CClient.h  CMakeLists.txt  CRemoteWindow.cpp  CRemoteWindow.h  CWindowState.cpp  CWindowState.h  LICENSE.txt  Main.qml  Reload.qml  RemoteWindow.pro  RemoteWindow.qrc  RemoteWindowExport.h  RemoteWindow_ja_JP.ts  Select.qml  SelectDirectory.qml  qtquickcontrols2.conf
RemoteWindow/ExtendQML/: CompletePopup.qml  ErrorDialog.qml  PasswordDialog.qml  ProcessPopup.qml  SelectFileDialog.qml  WaitPopup.qml
RemoteWindow/PP/: AuthForSSHServicePP.qml  AuthPP.qml  MainPP.qml  ReloadPP.qml  SelectDirectoryPP.qml  SelectPP.qml
RemoteWindow/i18n/: RemoteWindow_ja_JP.qm
SELinux/: sshconfig.pp  sshconfig.te
SSHConfig/: AboutQt.qml  CMakeLists.txt  CSSHServer.cpp  CSSHServer.h  CSSHService.cpp  CSSHService.h  CSSHTest.cpp  CSSHTest.h  CSSHValue.cpp  CSSHValue.h  CWindowState.cpp  CWindowState.h  ModeSettings.qml  SSHConfig.pro  SSHConfig.qrc  SSHConfigMain.qml  SSHConfig_ja_JP.ts  SSHServer.qml  SSHTest.qml  WelcomeSSHConfig.qml  main.cpp
SSHConfig/DeskopEntry/: SSHConfig.desktop.in
SSHConfig/ExtendQML/: CompletePopup.qml  ErrorDialog.qml  ErrorDialogPP.qml  ErrorPopup.qml  ExtendButton.qml  ExtendTextField.qml  PasswordDialog.qml  QuitDialog.qml  ReloadDialog.qml  RestartDialog.qml  SSHOptionListView.qml  SaveDialog.qml  SelectFolderDialog.qml  WarningDialog.qml  WarningDialogPP.qml
SSHConfig/PP/: AboutQtPP.qml  ModeSettingsPP.qml  SSHConfigMainPP.qml  SSHOptionListViewPP.qml  SSHServerPP.qml  SSHServerPP_org.qml  SSHTestPP.qml  TabViewAuthenticationPP.qml  TabViewEditorPP.qml  TabViewGeneralPP.qml  TabViewKerberosPP.qml  TabViewOtherPP.qml  WelcomeSSHConfigPP.qml
SSHConfig/SSHServerQML/: TabViewAuthentication.qml  TabViewEditor.qml  TabViewGeneral.qml  TabViewKerberos.qml  TabViewOther.qml
SSHConfig/Scripts/: SSHConfig.sh.in
SSHConfig/dbus/: system-local.conf.in
SSHConfig/i18n/: SSHConfig_ja_JP.qm
SSHConfigHelper/: CMakeLists.txt  SSHConfigAdaptor.cpp  SSHConfigAdaptor.h  SSHConfigHelper.cpp  SSHConfigHelper.h  SSHConfigHelper.pro  SSHConfigHelper.qrc  SSHConfigHelper_ja_JP.ts  main.cpp
SSHConfigHelper/i18n/: SSHConfigHelper_ja_JP.qm
SSHConfigServer/: CMakeLists.txt  CSSLSocket.cpp  CSSLSocket.h  CServer.cpp  CServer.h  CUIRunner.cpp  CUIRunner.h  SSHConfigServer.pro  SSHConfigServer.qrc  SSHConfigServer_ja_JP.ts  main.cpp
SSHConfigServer/etc/: sshconfig.json.in  sshconfigd.service.in
SSHConfigServer/i18n/: SSHConfigServer_ja_JP.qm
ThirdPartyLicenses/: libbsd_readpassphrase.txt
